@@ -250,6 +250,11 @@ int tig_supported()
   	return SUPPORT_ON;
 }
 
+int tig_reset()
+{
+	return tig_open();
+}
+
 int tig_register_cable(TicableLinkCable * lc, TicableMethod method)
 {
   lc->init = tig_init;
@@ -260,6 +265,7 @@ int tig_register_cable(TicableLinkCable * lc, TicableMethod method)
   lc->exit = tig_exit;
   lc->probe = tig_probe;
   lc->check = tig_check;
+  lc->reset = tig_reset;
 
   return 0;
 }
