@@ -8,6 +8,10 @@ Checking: valgrind & splint
 	
 Log:
 
+- 29/07/2005, version 3.9.5: roms
+	Added ticable_link_reset function (needed by TiEmu for proper operation and present
+	in ticables2).
+
 - 22/07/2005: jb
 	configure.ac: Generic fallback case for all Linux hosts.
 
